# skylib

./: .gitignore  .gitmodules  MANIFEST.in  README.md  meson.build  pyproject.toml  requirements.txt  setup.py
scripts/: example_image.fits  fits2wav.py  test_astrometry.py  test_sky_brightness.py
skylib/: __init__.py
skylib/astrometry/: __init__.py  an_engine.i  an_engine.py  an_engine_wrap.c  astap_solver.py  main.py
skylib/calibration/: __init__.py  background.py  bias.py  cosmetic.py  cosmic.py  dark.py  flat.py
skylib/color/: __init__.py  radio.py
skylib/combine/: __init__.py  alignment.py  cropping.py  dithering.py  lucky_imaging.py  mosaicing.py  pattern_matching.py  smart_stacking.py  stacking.py  util.py
skylib/enhancement/: __init__.py  wavelet.py
skylib/ephem/: __init__.py  main.py
skylib/extraction/: __init__.py  centroiding.py  main.py
skylib/io/: __init__.py  conversion.py
skylib/photometry/: __init__.py  aperture.py  aperture_numba.py  exposure.py
skylib/sonification/: __init__.py  main.py
skylib/util/: __init__.py  angle.py  fits.py  overlap.py  stats.py
skylib/util/RCRLib/: FunctionalForm.cpp  FunctionalForm.h  MiscFunctions.cpp  MiscFunctions.h  NonParametric.cpp  NonParametric.h  RCR.cpp  RCR.h  RCRLib.i  RCRLib.py  RCRLib_wrap.cxx  __init__.py
