[project]
name = "skylib"
dynamic = ["version"]
description = "A Python library for analyzing and processing astronomical image data"
authors = [
    {name = "Vladimir Kouprianov", email = "vkoupr@unc.edu"},
]
dependencies = [
    "astroscrappy>=1.2.0",
    "astropy ~= 6.1.7",
    "astroquery ~= 0.4.9.post1",
    "jplephem ~= 2.22",
    "matplotlib ~= 3.10.0",
    "numba ~= 0.61.0",
    "numpy ~= 2.1.3",
    "opencv-contrib-python-headless ~= 4.11.0",
    "photutils >= 2.0.0",
    "pillow ~= 11.1.0",
    "scipy ~= 1.15.2",
    "sep ~= 1.4.1",
    "sgp4 ~= 2.24",
    "skyfield ~= 1.50",
    "tbb == 2021.10.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {file = "LICENSE"}

[project.scripts]
fits2wav = "skylib.scripts.fits2wav:main"

[build-system]
requires = [
    "meson-python>=0.17.1",
    "numpy==2.1.3",
]
build-backend = "mesonpy"

[tool.pdm]
distribution = true

[[tool.pdm.autoexport]]
filename = "requirements.txt"
without-hashes = true
